--- a/electron-quick-start/index.css
+++ b/electron-quick-start/index.css
@@ -1,3 +1,9 @@
-body {
+html, body {
+  overflow-y: hidden;
   cursor: none;
+  height: 100%;
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
