--- a/electron-quick-start/index.css
+++ b/electron-quick-start/index.css
@@ -7,3 +7,10 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
+.main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
